# zoom-client-s2s-translator

./: .env.example  .gitignore  CLAUDE.md  MANAGER.md  README.dev.md  README.md  test_minimal_translate.py  test_s2st_access.py  translate.py
.claude/: settings.json
.claude/agents/: junior-developer.md  project-manager.md  senior-developer.md
docs/: ARCHITECTURE.md  AUDIO_CAPTURE_FLOW.md  CODE_REVIEW_QUEUE.md  DIRECTORY_STRUCTURE.md  JUNIOR_DEV_PLAN.md  ORCHESTRATION_PROTOCOL.md  PHASE1_COMPLETION.md  PHASE_2A_SUMMARY.md  PHASE_3_GEMINI_INTEGRATION.md  PROJECT_STATUS.md  S2ST_OPTIONS_RESEARCH.md  SPEC.md  TASK_QUEUE.md
electron/: .eslintrc.json  .prettierignore  electron-builder.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts
electron/src/main/: index.ts  python-bridge.ts
electron/src/preload/: index.ts
electron/src/renderer/: app.ts  index.html  styles.css
electron/src/shared/: types.ts
python/: pyproject.toml  requirements.txt  server.py
python/examples/: README.md  test_audio_capture.py  test_audio_playback.py  test_gemini_translation.py
python/src/: __init__.py  main.py
python/src/audio/: __init__.py  capture.py  devices.py  playback.py  utils.py
python/src/gemini/: __init__.py  client.py  config.py  errors.py
python/src/routing/: __init__.py  pipeline.py
python/tests/: __init__.py  test_audio_capture.py  test_audio_devices.py  test_audio_playback.py
scripts/: dev.sh  install-blackhole.sh
